[34] Add Communication diagram
Implementation of the Communication diagram.

Bug: https://gitlab.eclipse.org/eclipse/papyrus/org.eclipse.papyrus-web/-/issues/34
Bug: https://github.com/PapyrusSirius/papyrus-web/issues/315
Signed-off-by: Jessy Mallet <jessy.mallet@obeo.fr>